Fix service logic
